<resources>
    <string name="app_name">GetToWork</string>
    <string name="access_token">pk.eyJ1IjoiZmFpYXoyMyIsImEiOiJja2NvdWNyYzMwb25oMnhsZnhkZzY1dGViIn0.vh10zGVyrSxL6Sc593mZYw</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmFpYXoyMyIsImEiOiJja2NnN2w1djcwMG10MnNvMzRwc3gxeHdpIn0.33yl_fB2bDH4fX1Cc8dFJg</string>
    <string name="user_location_permission_explanation">Gib yor location, r8 nau!</string>
    <string name="user_location_permission_not_granted">Oh nooooo!</string>
    <string name="btn_registration">Зарегистрироваться</string>
    <string name="btn_passenger_selection">Я пассажир</string>
    <string name="btn_driver_selection">Я водитель</string>

    <string name="name">Имя пользователя</string>
    <string name="mobile_number">Телефон</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Пароль еще раз</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="select_home">Укажите Дом</string>
    <string name="select_work">Укажите Работу</string>
    <string name="helper_text">Не менее 6 символов</string>
    <string name="save">Cохранить</string>



</resources>