<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_view"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_view"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint">
                app:counterEnabled="false"
                app:counterMaxLength="6"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_view"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint">
                app:counterEnabled="false"
                app:counterMaxLength="6"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_view"
                    android:hint="@string/confirm_password"

                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_view"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/ronded_button1"
                android:text="@string/sign_up"
                android:textColor="@color/text_color" />

            <RelativeLayout
                android:id="@+id/relative_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_button"

                    android:textColor="@color/black80" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_in"
                    android:textColor="@color/black80" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/regLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
        android:id="@+id/btn_driver_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/regitration_btn_black_pressed_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_registration"
        android:textColor="@color/black80"
        android:textSize="24sp" />
</LinearLayout>


</RelativeLayout>